TreeBUGS 0.3.5 (February 2016)
===========

* Less informative Cauchy prior as default for continuous predictors in traitMPT
* Additional argument IVprec in traitMPT to specify hyperprior for precision of continuous slope paramters
* Data-generating function genMPT using general matrices of individual parameters


TreeBUGS 0.3.4 (February 2016)
===========

* Support for WinBUGS and OpenBUGS removed
* New function plotFreq to plot individual and mean raw frequencies per tree


TreeBUGS 0.3.3 (February 2016)
===========

* autojags fixed
* BCI and R^hat included in individual statistics
* Better checks for input arguments for betaMPT, traitMPT


TreeBUGS 0.3.2 (January 2016)
===========

* csv-format for "data" and "covData": semicolon (;) instead of comma (,) to separate cells
* Printing of summary output to "parEstFile" improved


TreeBUGS 0.3.1 (January 2016)
===========

* New function plotDistribution() to plot histograms of individual mean estimates


TreeBUGS 0.3.0 (January 2016)
===========

* Discrete factors as covariates in traitMPT with fixed and random effects (see argument: covType)
* Improved covariate handling: irrelevant columns are neglected
* Goodness of fit plots for mean frequencies (plotFit)
* Removed default values for arguments that were NULL previously
* Updated vignette
* Various Bugfixes


TreeBUGS 0.2.3 (January 2016)
===========

* Predictors can be included in traitMPT (same arguments covData and covStructure as in betaMPT)
* Nice summary for covariates in betaMPT and predictors in traitMPT
* Checked and fixed data generation and fitting for latent trait and beta MPT model
* Remaining issue: SD of parameters in betaMPT not precisely estimated
* Informative error message if N=0 in a tree for a person
* Updated vignette


TreeBUGS 0.2.2 (December 2015)
===========

* Covariates can be included in betaMPT (see arguments covData and covStructure)
* Data generation for latent trait MPT model: genTraitMPT()