@@ -76,6 +76,7 @@ traitMPT <- function(eqnfile,  # statistical model stuff
   mergedTree <- tHoutput$mergedTree
 
   thetaNames <- SubPar[,1:2]
+  thetaUnique <- thetaNames$Parameter[as.numeric(rownames(unique(thetaNames[2])))]
   S <- max(SubPar$theta)
   isIdentifiable(S, mergedTree)
 
@@ -167,6 +168,7 @@ traitMPT <- function(eqnfile,  # statistical model stuff
                   transformedParameters=transformedPar$transformedParameters)
 
   # class structure for TreeBUGS
+  mcmc$BUGSoutput <- renameBUGSoutput(mcmc$BUGSoutput, thetaUnique, "traitMPT")
   fittedModel <- list(summary=summary,
                       mptInfo=mptInfo,
                       mcmc=mcmc,
